--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"description": "What am I about?",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"devstart": "nodemon server.js"
 	},
 	"dependencies": {
 		"express": "^4.14.0",
