--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"devstart": "nodemon server.js"
+		"devstart": "nodemon server.js",
+		"teststart": "NODE_ENV=test node server.js"
 	},
 	"dependencies": {
 		"express": "^4.14.0",
